      may not be supported by all devices. The default is \code{FALSE}.

      \item \code{list.files()}/\code{dir()} gains a new argument
      \code{include.dirs()} to include directories in the listing when
      \code{recursive = TRUE}.

      \item New function \code{list.dirs()} lists all directories,
      (even empty ones).

      \item \code{file.copy()} now copies read/write/execute permissions
      on files (it already did so for directories in recursive copies).

      \item \code{Sys.umask()} now accepts \code{mode = NA} and returns
      the current \code{umask} value (still invisibly) without changing it.

      \item There is a \code{!} method for classes \code{"octmode"} and
      \code{"hexmode"}: this allows \code{xor(a, b)} to work if both
      \code{a} and \code{b} are from one of those classes.

      \item \code{as.raster()} no longer fails for vectors or matrices
      containing \code{NA}s.

      \item New hook \code{"before.new.plot"} allows functions to be run
      just before advancing the frame in \code{plot.new}, which is
      potentially useful for custom figure layout implementations.

      \item Package \pkg{tools} has a new function \code{compactPDF()}
      to try to reduce the size of PDF files \emph{via} \command{qpdf}
      or \command{gs}.

      \item \code{tar()} has a new argument \code{extra_flags}.

      \item \code{dotchart()} accepts more general objects \code{x} such
      as 1D tables which can be coerced by \code{as.numeric()} to a
      numeric vector, with a warning since that might not be
      appropriate.

      \item The previously internal function \code{create.post()} is now
      exported from \pkg{utils}, and the documentation for
      \code{bug.report()} and \code{help.request()} now refer to that
      for \code{create.post()}.

      It has a new \code{method = "mailto"} on Unix-alikes similar to
      that on Windows: it invokes a default mailer via \command{open}